--- a/templates/passport/calendar.html
+++ b/templates/passport/calendar.html
@@ -4,7 +4,7 @@
 {% endblock%}
 {% block head%}
 <script type="text/javascript" src="/media/js/fullcalendar.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/media/js/fullcalendar.css">
+<link rel="stylesheet" type="text/css" href="/media/js/fullcalendar.css" />
 <script type='text/javascript'>
 
 	$j(document).ready(function() {
@@ -28,7 +28,7 @@
 	});
 
 </script>
-<style>
+<style type='text/css'>
 #calendar{
 	width:900px;
 }
