--- a/templates/passport/map.html
+++ b/templates/passport/map.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block leftcolsub %}
 
-<script>
+<script type='text/javascript'>
 $j(document).ready( function () {
 	var map;
 	var latlng = new google.maps.LatLng(39.953, -75.186);
