--- a/templates/passport/venue_detail.html
+++ b/templates/passport/venue_detail.html
@@ -38,7 +38,7 @@
 		<h3>Hours of Operation</h3>
 		{{object.hours|safe}}
 		<h3>Cost</h3>
-		{{object.cost|safe}}</div>
+		<p>{{object.cost|safe}}</p></div>
 		<div class="vencolleft">
 					<div id="venuepic">
 				<img alt='' src="{{ MEDIA_URL }}{{object.pic}}" border="0" />
