--- a/templates/passport/venue_list.html
+++ b/templates/passport/venue_list.html
@@ -21,7 +21,7 @@
 				<h3>Hours of Operation</h3>
 				{{object.hours|safe}}
 				<h3>Cost</h3>
-				{{object.cost|safe}}
+				<p>{{object.cost|safe}}</p>
 		</div>
 		<div class="vencolleft">
 			{% if object.thumbnail %}
