--- a/templates/passport/index.html
+++ b/templates/passport/index.html
@@ -38,7 +38,13 @@
 				<p><a href="{% url passport.views.event_calendar %}">View the Calendar</a></p>
    </div>
   
-        <div id="slide"> <img alt ='' width="320" height="200" border="0" src="media/images/slide.jpg" /></div>
+        <div id="slide">
+        	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="320" height="200" id="/media/images/slide" align="middle">
+				<param name="allowScriptAccess" value="sameDomain" />
+				<param name="allowFullScreen" value="false" />
+				<param name="movie" value="/media/images/slide.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#000000" />	<embed src="/media/images/slide.swf" quality="high" bgcolor="#000000" width="320" height="200" name="/media/images/slide" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer" />
+			</object>
+	</div>
         <!--in the news-->
 	 <p><br class="clearfloat" />
 		</p>
