--- a/templates/passport/event_detail.html
+++ b/templates/passport/event_detail.html
@@ -13,7 +13,7 @@
 	<p>{{event.date|date:"N j, Y, P"}}</p>
 </div>
 <div class="vencolleft">
-	<div id="venuepic">
+	<div class="venuepic">
 		{% if event.pic %} 
 			<img alt='' src="{{ MEDIA_URL}}{{event.pic}}" />
 		{% else %} 
