--- a/templates/passport/reservation_detail.html
+++ b/templates/passport/reservation_detail.html
@@ -18,5 +18,5 @@
 {{object.user.firstname}}
 {{object.user.lastname}}
 
-<p>This is your e-Ticket (#{{object.id}}). Be sure to print it, and present it along with your Student ID, and your Cultural Passport when attending the performance.</p>
+<div class="ticketdetail">This is your e-Ticket (#{{object.id}}). <strong>Be sure to print it</strong>, and present it along with your Student ID, and your Cultural Passport when attending the performance. <br/><br/><em><strong>Please Note: you will not be able to return to this page. Please print this page now or save this page as a screenshot if you do not have a printer available at this time</strong></em>.</div>
 {% endblock %}
