--- a/templates/passport/venue_detail.html
+++ b/templates/passport/venue_detail.html
@@ -40,7 +40,7 @@
 		<h3>Cost</h3>
 		<p>{{object.cost|safe}}</p></div>
 		<div class="vencolleft">
-					<div id="venuepic">
+					<div class="venuepic">
 				<img alt='' src="{{ MEDIA_URL }}{{object.pic}}" border="0" />
 			</div>
 		{{object.phone}}<br/>
