--- a/media/styles/subpage.css
+++ b/media/styles/subpage.css
@@ -78,8 +78,9 @@ padding: 0 20px;
 	font-size:10px;
 }
 .venuepic {
-	margin:0px 20px 5px 0px;/*T, R, B, L*/
+	margin:0px 20px 15px 0px;/*T, R, B, L*/
 	float:left;
+	
 }
 #related ul{
 	margin:0px 0px 0px -25px;/*T, R, B, L*/
@@ -125,7 +126,6 @@ margin-bottom:10px;
 #bottombyline{
 	margin-top:15px;
 	padding:5px;
-	font-style:italic;
 	font-size: 11px;
 	border-top:1px solid #bfbfbf;
 	border-bottom:1px solid #bfbfbf;
@@ -134,6 +134,7 @@ margin-bottom:10px;
 	float:left;
 	margin-right:10px;
 	width:225px;
+	margin-bottom:10px;
 }
 /*section headers*/
 #subarticlesec_arts {/*Colored block header with category ARTS*/
@@ -144,8 +145,9 @@ margin-bottom:10px;
 #subarticlesec_science {/*Colored block header with category SCIENCE*/
 	background: #7da141;
 	width: 665px;
-padding:2px 2px 2px 8px;/*T, R, B, L*/
+	padding:2px 2px 2px 8px;/*T, R, B, L*/
 }
+
 #subarticlesec_history {/*Colored block header with category HISTORY*/
 	background: #012861;
 	width: 665px;
@@ -166,4 +168,20 @@ padding:2px 2px 2px 8px;/*T, R, B, L*/
 	background: #f7941e;
 	width: 665px;
 	padding:2px 2px 2px 8px;/*T, R, B, L*/
+	font-size:14px;
+	font-weight:bold;
+}
+.ticketdetail {
+	font-size:15px;
+}
+/*section header text for category page*/
+.cat_txt {
+	color: #FFF;
+	font-size: 18px;
+}
+ol, ul {
+	font-size:12px;
+}
+li {
+	margin-top:10px;
 }
