--- a/media/styles/subpage.css
+++ b/media/styles/subpage.css
@@ -142,7 +142,7 @@ margin-bottom:10px;
 	width: 665px;
 	padding:2px 2px 2px 8px;/*T, R, B, L*/
 }
-#subarticlesec_science {/*Colored block header with category SCIENCE*/
+#subarticlesec_science_and_nature {/*Colored block header with category SCIENCE*/
 	background: #7da141;
 	width: 665px;
 	padding:2px 2px 2px 8px;/*T, R, B, L*/
