--- a/templates/passport/article.html
+++ b/templates/passport/article.html
@@ -7,8 +7,8 @@
 
 {%block leftcolsub %}
 <div id="subarticletxt">
-	<div id="subarticlesec_{{current_page.get_root.title|lower}}">
-		<a  href="#">{{current_page.get_root.title}}</a>
+	<div id="subarticlesec_{{current_page.get_root.title|lower|replace_spaces}}">
+		<a  href="{% show_absolute_url current_page.get_root %}">{{current_page.get_root.title}}</a>
 	</div>
     
 </div>
